assets/sass/sections/_products.scss
@include themes($themes) {
    .products {
        display: flex;
        flex-direction: column;
        position: relative;
        background-color: theme("primary-100");
        padding-bottom: $spacing-4xl;

        @include breakpoint-l {
            padding-bottom: 14rem;
        }

        &__content {
            display: flex;
            flex-direction: column;
            gap: $spacing-m;

            @include breakpoint-l {
                flex-direction: row;
            }
        }

        &__items {
            display: flex;
            flex-direction: column;
            gap: $spacing-s;
            width: 100%;
        }

        &__item {
            display: flex;
            flex-direction: column;
            justify-content: center;
            border-radius: $radius-l;
            cursor: pointer;
            overflow: auto;
            position: relative;

            h2 {
                padding: $spacing-l;
                background: theme("neutral-100");
            }

            p {
                height: 0;
                background: theme("neutral-100");
                padding: 0rem $spacing-l;
                transition: .5s ease-in-out;
            }

            span {
                position: absolute;
                top: 24px;
                right: 24px;
                transition: .5s ease-in-out;
            }

            &.active {
                p {
                    height: 200px;
                }

                > .products__description {
                    max-height: 200px;
                }

                span {
                    transform: rotate(180deg);
                }
            }
        }

        &__picture {
            height: 220px;
            width: 100%;
            z-index: 1;
            border-radius: $radius-l;
            overflow: hidden;
            position: relative;

            @include breakpoint-s {
                height: 280px;
            }

            @include breakpoint-l {
                max-width: 480px;
                height: auto;
            }

            img {
                position: absolute;
                height: 100%;
                width: 100%;
                object-fit: cover;
                opacity: 0;
                transition: .5s ease-in-out;

                &.active {
                    opacity: 1;
                }
            }
        }

        &__description {
            max-height: 0;
            overflow: hidden;
            position: relative;
            transition: .5s ease-in-out;
        }

        &__slide {
            position: absolute;
            bottom: -120px;
            left: 0;
            height: 280px;
            width: 100%;
            overflow: hidden;
            display: flex;
            align-items: flex-start;

            & img {
            border-radius: $radius-m;
            }

            @include breakpoint-m {
                height: 320px;
                align-items: center;
            }

            @include breakpoint-l {
                height: 470px;
                bottom: -200px;

                & img {
                height: 320px;
                width: auto;
                }
            }
        }

        &__slides {
            transform: rotate(-3deg) translateX(-20px);
            display: flex;
            gap: $spacing-s;
            transition: transform 0.3s ease-out;
        }
    }
}

